--- a/index.html
+++ b/index.html
@@ -126,10 +126,9 @@
           <a
             class="twitter-link"
             target="_blank"
-            href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
+            href="https://www.linkedin.com/in/nakul-goyal-a44976188?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2FodTWebgQDmpndlfmHMURw%3D%3D"
+            >Nakul Goyal</a
+          >
         </p>
       </div>
 
